log
Thu 25 Apr 2024 03:38:26 PM UTC: 
 tests:  0|6
total_score: 0/70
fbc4a46
Thu 25 Apr 2024 03:49:08 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|6
total_score: 10/70
8f00fe9
Thu 25 Apr 2024 03:54:32 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
5d3f667
Thu 25 Apr 2024 03:55:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
ca178e5
Thu 25 Apr 2024 03:55:50 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
8d8fb6e
Thu 25 Apr 2024 04:02:37 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:69:7: error: unused variable ‘Oldsize’ [-Werror=unused-variable]
   69 |   int Oldsize = map->size;
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
61bb12d
Thu 25 Apr 2024 04:02:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
9798406
Thu 25 Apr 2024 04:03:31 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|4
total_score: 30/70
2dbc8b6
Thu 25 Apr 2024 04:04:41 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 30/70
959d3ff
Thu 25 Apr 2024 04:05:17 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
d2770ad
